# blueprint-normalizer

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  TODO.md  pyproject.toml
docs/: README.md
docs/decisions/: title-block-crop-and-ocr-roi-strategy.md  title-block-position-arbitration-design.md
docs/plans/: 004-ground-truth-evaluation-plan.md  005-manual-review-pack-plan.md  006-augmented-90-sample-plan.md  007-combined-evaluation-plan.md  009-yolo-obb-label-tools-plan.md  014-yolo-obb-debugging-research-plan.md  016-three-way-rotation-comparison-plan.md  017-ocr-vlm-fallback-workflow-plan.md  019-yolo-obb-prediction-error-improvement-plan.md  020-yolo-obb-postprocess-review-pack-plan.md  021-yolo-obb-postprocess-implementation-plan.md  022-yolo-obb-postprocess-failure-review-pack-implementation-plan.md  023-yolo-obb-postprocess-review-archive-and-edge-contact-rule-plan.md  024-yolo-obb-postprocess-frame-contact-upgrade-plan.md  025-yolo-obb-sample-009-supplement-review-plan.md  026-yolo-obb-sample-009-review-archive-hardcase-plan.md  027-yolo-obb-hardcase-retraining-prep-plan.md  028-yolo-obb-round3-hardcase-dataset-plan.md  029-yolo-obb-round3-overlay-archive-training-prep-plan.md  030-yolo-obb-round3-training-plan.md  031-title-block-standard-research-and-round3-prediction-archive-plan.md  032-ocr-title-block-diagnostic-experiment-plan.md  (+75 more)
etc/: README.md  blueprint-normalizer.example.toml
references/: README.md
reports/: rpd-rotation-detection.md
rules/: mechanical-drawing-rotation.md
scripts/: README.md
scripts/common/: __init__.py  (+1 more)
tests/: __init__.py
(+125 files in other folders)
